Incorrect check for nmethod re-registration in C1

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • gc
    • b21

      When an nmethod is compiled, it's registered with the heap if ScavengeRootsInCode is non-zero (which it always is). However, during code patching in C1 we re-register the nmethod with the heap only if it also has scavengable oops. This additional requirement is only valid for calls to CodeCache::add_scavenge_root_nmethod(), and not for CollectedHeap::register_nmethod(). This happens to work today since G1's is_scavengable() basically always returns true.

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Per Liden (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: