8178363: Incorrect check for nmethod re-registration in C1

Reviewed-by: stefank, rbackman