hotspot/src/share/vm/c1/c1_Runtime1.cpp
@@ -1221,12 +1221,13 @@ JRT_ENTRY(void, Runtime1::patch_code(JavaThread* thread, Runtime1::StubID stub_i
 
   // If we are patching in a non-perm oop, make sure the nmethod
   // is on the right list.
-  if (ScavengeRootsInCode && ((mirror.not_null() && mirror()->is_scavengable()) ||
-                              (appendix.not_null() && appendix->is_scavengable()))) {
+  if (ScavengeRootsInCode) {
     MutexLockerEx ml_code (CodeCache_lock, Mutex::_no_safepoint_check_flag);
     nmethod* nm = CodeCache::find_nmethod(caller_frame.pc());
     guarantee(nm != NULL, "only nmethods can contain non-perm oops");
-    if (!nm->on_scavenge_root_list()) {
+    if (!nm->on_scavenge_root_list() &&
+        ((mirror.not_null() && mirror()->is_scavengable()) ||
+         (appendix.not_null() && appendix->is_scavengable()))) {
       CodeCache::add_scavenge_root_nmethod(nm);
     }
 
